--- a/public/index.html
+++ b/public/index.html
@@ -158,7 +158,7 @@
                 vertices[index * 3 + 2] = point.z || 0; // Default to 0 if z is undefined
             });
             geometry.setAttribute('position', new THREE.BufferAttribute(vertices, 3));
-            const material = new THREE.LineBasicMaterial({ color: 0x00aaff });
+            const material = new THREE.LineBasicMaterial({ color: 0xff5555 });
             lineMesh = new THREE.Line(geometry, material);
             scene.add(lineMesh);
         }
